Updated CSS style to fix the layout issue with footer

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body, html {
     margin: 0;
     padding: 0;
@@ -7,7 +11,6 @@ body, html {
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding-bottom: 60px;
 }
 
 .header {
@@ -223,12 +226,14 @@ body, html {
 }
 
 .footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #333;
     color: #ffffff;
     text-align: center;
     padding: 10px;
     height: 50px;
-    padding: 10px;
     width: 100%;
 }
 
